# Crud-app

./: README.md  pyproject.toml  settings.ini
account/admin/: __init__.py  users.py
account/helper/: __init__.py  enums.py
account/migrations/: 0001_initial.py
account/models/: user.py
account/repository/manager/: __init__.py  user.py
account/repository/queryset/: user.py
kernel/: settings.py  urls.py
kernel/settings/: base.py  development.py  production.py
kernel/settings/services/: __init__.py  auth.py  backend.py  database.py  localization.py
media/template/: index.html
painless/repository/generator/: __init__.py  task.py
warehouse/: mixins.py
warehouse/admin/: __init__.py  task.py
warehouse/api/: urls.py
warehouse/api/v1/serializers/: task.py
warehouse/api/v1/views/: __init__.py  task.py
warehouse/managment/commands/: __init__.py  task.py
warehouse/migrations/: 0001_initial.py
warehouse/models/: task.py
warehouse/repository/generator/: __init__.py  task.py
warehouse/repository/manager/: __init__.py  task.py
warehouse/repository/queryset/: __init__.py  task.py
warehouse/tests/: test_task.py
